# AgentHub

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.deps/fastapi-0.135.1.dist-info/: RECORD
.deps/httpx-0.28.1.dist-info/: RECORD
.deps/pygments-2.19.2.dist-info/: RECORD
.deps/pytest-9.0.2.dist-info/: RECORD
.deps/python_dotenv-1.2.2.dist-info/: RECORD
.deps/uvicorn-0.41.0.dist-info/: RECORD
apps/api/: pyproject.toml
apps/api/.vendor/fastapi-0.135.1.dist-info/: RECORD
apps/api/.vendor/httpx-0.28.1.dist-info/: RECORD
apps/api/.vendor/pygments-2.19.2.dist-info/: RECORD
apps/api/.vendor/pytest-9.0.2.dist-info/: RECORD
apps/api/.vendor/python_dotenv-1.2.2.dist-info/: RECORD
apps/api/.vendor/uvicorn-0.41.0.dist-info/: RECORD
apps/api/agenthub_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/app/: config.py  main.py
apps/api/app/api/: schemas.py
apps/api/app/api/routes/: __init__.py  catalog.py  providers.py  runs.py  sessions.py
apps/api/app/db/: session.py
apps/api/app/services/: change_review.py  runs.py  runtime.py  sessions.py  skill_config.py  skills.py  worker.py
apps/api/tests/: test_app.py  test_provider_synthesis_and_runs.py  test_provider_synthesis_runtime.py  test_runtime_slice.py  test_skill_catalog.py
apps/api/tests/fixtures/: mcp_echo_server.py  mcp_mutation_server.py
apps/web/: package.json  pnpm-lock.yaml  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/skills/: page.tsx
apps/web/lib/: api.ts
docs/architecture/: runtime.md
docs/product/: roadmap.md
(+1 files in other folders)
