[project]
name = "agenthub-api"
version = "0.1.0"
description = "AgentHub API scaffold"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlmodel>=0.0.22",
  "agenthub-core",
  "agenthub-models",
  "agenthub-skills",
  "agenthub-memory",
  "agenthub-safety",
  "agenthub-registry",
  "agenthub-sdk",
]

[tool.uv.sources]
agenthub-core = { workspace = true }
agenthub-models = { workspace = true }
agenthub-skills = { workspace = true }
agenthub-memory = { workspace = true }
agenthub-safety = { workspace = true }
agenthub-registry = { workspace = true }
agenthub-sdk = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
